@@ -1,12 +1,23 @@
 plugins {
     id 'java-library'
-
 }
 
 dependencies {
-    implementation "com.typesafe:config:1.3.3"
+    implementation "com.typesafe:config:1.4.2"
 }
 
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                '--add-modules', 'jdk.compiler',
+                '--add-exports', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-exports', 'jdk.compiler/com.sun.tools.javac.code=config.composer.annotations',
+                '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+                '--add-modules', 'typesafe.config',
+                '--module-path', configurations.compileClasspath.asPath
+        ]
+    }
+}
 
 publishing {
 
