@@ -4,13 +4,47 @@ plugins {
 
 dependencies {
     implementation project(":annotations")
-    implementation "org.apache.commons:commons-lang3:3.8.1"
+    implementation "org.apache.commons:commons-lang3:3.13.0"
     implementation files("${System.getProperty('java.home')}/../lib/tools.jar")
-    implementation "com.squareup:javapoet:1.11.1"
-    implementation "com.typesafe:config:1.3.3"
+    implementation "com.squareup:javapoet:1.13.0"
+    implementation "com.typesafe:config:1.4.2"
 
-    testImplementation "commons-io:commons-io:2.6"
-    testImplementation "com.google.testing.compile:compile-testing:0.15"
+    testImplementation "commons-io:commons-io:2.15.1"
+    testImplementation "com.google.testing.compile:compile-testing:0.21.0"
+}
+
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                '--add-modules', 'jdk.compiler',
+                '--add-exports', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-exports', 'jdk.compiler/com.sun.tools.javac.code=config.composer.processor',
+                '--add-exports', 'jdk.compiler/com.sun.tools.javac.code=config.composer.annotations',
+                '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+                '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=config.composer.processor',
+                '--add-modules', 'typesafe.config',
+                '--module-path', configurations.compileClasspath.asPath
+        ]
+    }
+}
+
+compileTestJava {
+    doFirst {
+        options.compilerArgs = [
+                '--add-modules', 'jdk.compiler',
+                '--add-exports', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-exports', 'jdk.compiler/com.sun.tools.javac.code=config.composer.processor',
+                '--add-exports', 'jdk.compiler/com.sun.tools.javac.code=config.composer.annotations',
+                '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+                '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=config.composer.processor',
+                '--add-modules', 'typesafe.config',
+                '--module-path', configurations.compileClasspath.asPath
+        ]
+    }
+}
+
+test {
+    jvmArgs = ['--illegal-access=permit']
 }
 
 publishing {
